--- a/index.html
+++ b/index.html
@@ -1,16 +1,161 @@
 
-<html>
-    <h1>
-        Hey, I am PSM  
-    </h1>
-    <body>
-        <h2>About me</h2>
-        <p>
-            I am a additive manufacturing subject matter expert with experience across industry
-        </p>
-        <h2>What I'm working on</h2>
-        <p>
-            I'm obsessed with 3-D bioprinting and microgravity & orbital manufacturing 
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Peter S. Montgomery - Visionary Leader in Additive Manufacturing</title>
+  <style>
+    /* Global Styles */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+    }
+    a {
+      color: #007bff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    header, section {
+      background: #fff;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    header {
+      text-align: center;
+    }
+    h1 {
+      margin-bottom: 5px;
+    }
+    .contact-info {
+      margin-top: 10px;
+    }
+    .contact-info span {
+      display: inline-block;
+      margin: 0 10px;
+    }
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 10px;
+      margin-bottom: 15px;
+      color: #0056b3;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    ul li {
+      margin-bottom: 10px;
+    }
+    .experience-item, .education-item, .expertise-item {
+      margin-bottom: 20px;
+    }
+    .experience-item h3, .education-item h3 {
+      margin: 0;
+      color: #333;
+    }
+    .experience-item p, .education-item p {
+      margin: 5px 0;
+    }
+    .skills p {
+      margin: 5px 0;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Peter S. Montgomery</h1>
+    <p>Visionary Leader in Additive Manufacturing | Engineering Innovator | Strategic Growth Expert</p>
+    <div class="contact-info">
+      <span>📍 Syracuse, NY</span>
+      <span>📧 <a href="mailto:peter.montgomery5197@gmail.com">peter.montgomery5197@gmail.com</a></span>
+      <span>🔗 <a href="#" target="_blank">LinkedIn Profile</a></span>
+    </div>
+  </header>
+  
+  <section id="about">
+    <h2>About Me</h2>
+    <p>With over 16 years of expertise in additive manufacturing, reverse engineering, and DfAM, I have led cutting-edge R&D initiatives, optimized production processes, and driven technological innovation across aerospace, automotive, and medical device industries. As a mentor and strategist, I transform complex engineering challenges into actionable business solutions that generate multimillion-dollar value.</p>
+  </section>
+  
+  <section id="achievements">
+    <h2>Key Achievements</h2>
+    <ul>
+      <li>✅ Led 100+ additive manufacturing projects, driving multimillion-dollar revenue increases.</li>
+      <li>✅ Pioneered post-processing innovations, reducing production time by 25% and enhancing quality.</li>
+      <li>✅ Exceeded sales targets by 30%, accelerating industry adoption of new AM technologies.</li>
+      <li>✅ Developed advanced training programs, mentoring engineers who advanced to leadership roles.</li>
+    </ul>
+  </section>
+  
+  <section id="experience">
+    <h2>Experience</h2>
+    <div class="experience-item">
+      <h3>Engineering Mentor &amp; Special Projects Manager</h3>
+      <p><strong>CADimensions Inc.</strong> | 2021 – Present</p>
+      <ul>
+        <li>Designed and led competency frameworks for junior engineers in AM technologies.</li>
+        <li>Managed advanced additive manufacturing and reverse engineering projects.</li>
+        <li>Provided expert consultation, fostering strong client relationships and increased project scopes.</li>
+      </ul>
+    </div>
+    <div class="experience-item">
+      <h3>Senior R&amp;D Engineer</h3>
+      <p><strong>Purple Platypus</strong> | 2016 – 2021</p>
+      <ul>
+        <li>Led cross-functional R&amp;D teams in developing industry-first AM applications.</li>
+        <li>Oversaw 10–30 concurrent projects, balancing innovation, client education, and application development.</li>
+        <li>Worked with startups and enterprises to bring new products to market.</li>
+      </ul>
+    </div>
+    <div class="experience-item">
+      <h3>Project Lead | Additive Manufacturing &amp; Post-Processing</h3>
+      <p><strong>Post Process Technologies</strong> | 2013 – 2014</p>
+      <ul>
+        <li>Engineered post-processing systems, improving production efficiency and product quality.</li>
+        <li>Managed vendor relationships, ensuring timely execution of high-priority projects.</li>
+      </ul>
+    </div>
+    <div class="experience-item">
+      <h3>Freelance 3D Printer Designer &amp; Developer</h3>
+      <p><strong>Self-Employed</strong> | 2010 – 2013</p>
+      <ul>
+        <li>Designed and built 75+ custom 3D printers, contributing to early open-source AM adoption.</li>
+      </ul>
+    </div>
+  </section>
+  
+  <section id="education">
+    <h2>Education</h2>
+    <div class="education-item">
+      <p>🎓 <strong>Master’s Certificate in 3D Bioprinting &amp; Biomanufacturing (4.0 GPA)</strong><br>
+      Carnegie Mellon University | 2024 – 2025</p>
+    </div>
+    <div class="education-item">
+      <p>🎓 <strong>B.A. in Chinese</strong><br>
+      Tufts University | 2007 – 2012</p>
+    </div>
+  </section>
+  
+  <section id="skills">
+    <h2>Technical Expertise &amp; Certifications</h2>
+    <div class="expertise-item">
+      <p><strong>CAD &amp; Simulation:</strong> SolidWorks, Geomagic Design X, Siemens NX, CATIA, Materialise Magics</p>
+      <p><strong>Additive Manufacturing:</strong> Materialise Mimics, Autodesk AutoCAD, Blender</p>
+      <p><strong>Programming &amp; Data Analysis:</strong> Python, C++, MATLAB</p>
+    </div>
+    <div class="expertise-item">
+      <p>🏆 Stratasys Support &amp; Engineering Certifications</p>
+      <p>🏆 Advanced AM Systems Training</p>
+      <p><strong>Skills:</strong> Strategic Leadership | R&amp;D Innovation | Project Management | Business Growth</p>
+    </div>
+  </section>
+</body>
 </html>
