--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,6 +13,7 @@
       background-color: #f4f4f4;
       color: #333;
       line-height: 1.6;
+      text-align: center; /* Centers all text on the page */
     }
     a {
       color: #007bff;
