--- a/index.html
+++ b/index.html
@@ -77,13 +77,6 @@
     </div>
   </header>
   
-  <!-- Showcase Section with the Provided Image -->
-  <section id="showcase">
-    <h2>Showcase</h2>
-    <img src="my_3d_part.jpg" alt="3D Printed Assembly" style="max-width: 80%; height: auto;">
-    <p>This image showcases a 3D printed assembly featuring a stepper motor and leadscrew mechanism.</p>
-  </section>
-
   <section id="about">
     <h2>About Me</h2>
     <p>With over 16 years of expertise in additive manufacturing, reverse engineering, and DfAM, I have led cutting-edge R&D initiatives, optimized production processes, and driven technological innovation across aerospace, automotive, and medical device industries. As a mentor and strategist, I transform complex engineering challenges into actionable business solutions that generate multimillion-dollar value.</p>
@@ -160,6 +153,13 @@
       <p>🏆 Advanced AM Systems Training</p>
       <p><strong>Skills:</strong> Strategic Leadership | R&amp;D Innovation | Project Management | Business Growth</p>
     </div>
+  </section>
+
+  <!-- Showcase Section with the Provided Image, placed last -->
+  <section id="showcase">
+    <h2>Showcase</h2>
+    <img src="my_3d_part.jpg" alt="3D Printed Assembly" style="max-width: 80%; height: auto;">
+    <p>This image showcases a 3D printed assembly featuring a stepper motor and leadscrew mechanism.</p>
   </section>
 </body>
 </html>
